--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@ an organization where I can utilize my skills in the best possible manner, which
                       <div class="progress-line"><span class="javascript"></span></div>
                       <div class="bar">
                         <div class="info">
-                          <span>C Programming</span>
+                          <span>Python</span>
                         </div>
-                        <div class="progress-line"><span class="c"></span></div>
+                        <div class="progress-line"><span class="python"></span></div>
+                      </div>
+                      <div class="bar">
+                        <div class="info">
+                          <span>SEO</span>
+                        </div>
+                        <div class="progress-line"><span class="seo"></span></div>
                       </div>
                     </div>
                   </div>
@@ -160,9 +166,6 @@ an organization where I can utilize my skills in the best possible manner, which
             <h2>Portfolio Website using MERN
             </h2>
             <p>Build Using HTML,CSS,JS, MongoDB, Express JS,React</p>
-            <button><a href="#" target="blank">View source <i
-                  class="fas fa-external-link-alt"></i></a>
-            </button>
           </div>
         </div>
 
@@ -171,9 +174,6 @@ an organization where I can utilize my skills in the best possible manner, which
             <h2>Laboratory Mannagement System for Dept. of Computer Applications
               </h2>
             <p>Build Using HTML,CSS</p>
-            <button><a href="#" target="blank">View source <i
-                  class="fas fa-external-link-alt"></i></a>
-            </button>
           </div>
         </div><br><br>
 
@@ -183,9 +183,6 @@ an organization where I can utilize my skills in the best possible manner, which
               
             </h2>
             <p>Build Using HTML,CSS,JS, MongoDB, Express JS,React</p>
-            <button><a href="#" target="blank">View source <i
-                  class="fas fa-external-link-alt"></i></a>
-            </button>
           </div>
         </div>
 
